change user classes to support profile page api